--- a/client/src/styles/signup.css
+++ b/client/src/styles/signup.css
@@ -1,24 +1,23 @@
-.App {
-    text-align: center;
-    background-color:blue;
-  }
-   
-  .label{
+.signup-form{
+  text-align: center;
+}  
+  
+  .signup-label{
     display: block;
     font-size: larger;
-    color: white;
+    color: black;
     padding: 5px;
   }
    
-  .input{
+  .signup-input{
     font-size: larger;
     padding: 5px;
     margin: 2px;
     
   }
-  .btn{
+  .signup-btn{
     color: white;
-    background-color: red;
+    background-color: black;
     border-radius: 5px;
     font-size: larger;
     display: block;
@@ -26,21 +25,21 @@
     margin: 10px auto;
   }
    
-  .messages{
+  .signup-messages{
     display: flex;
     justify-content: center;
   }
    
-  .error{
+  .signup-error{
     display: block;
-    background-color: red;
-    color: white;
+    background-color: white;
+    color: red;
     width: fit-content;
     height: 50px;
     padding: 5px;
   }
    
-  .success{
+  .signup-success{
     display: block;
     background-color: lightblue;
     color: black;
